<resources>
    <string name="app_name">Genspot</string>
    <string name="sign_in_spotify">Sign in with Spotify</string>
    <string name="spotify">Spotify</string>
    <string name="continue_without_spotify"><u>Continue without Spotify</u></string>
    <string name="placeholder_song_title">Title</string>
    <string name="char_bullet">&#8226;</string>
    <string name="placeholder_song_information">Artist - Album &#8226; 3:59</string>
    <string name="char_vertical_ellipsis">&#8942;</string>
    <string name="placeholder_song_cover_contentdesc">Album cover</string>
    <string name="close_content_desc">Close drawer</string>
    <string name="open_content_desc">Open drawer</string>
    <string name="search_hint">Search…</string>
    <string name="song_history">Song history</string>
    <string name="placeholder_song_artist">Artist</string>
    <string name="search">Search</string>
    <string name="recommendations_artists">Recommended artists</string>
    <string name="recommendations_albums">Recommended albums</string>
    <string name="recommendations_songs">Recommended songs</string>
    <string name="placeholder_button">Button</string>
    <string name="create_playlist">Create playlist</string>
    <string name="view_playlist">View playlist</string>
    <string name="results">Results</string>
    <string name="sign_out">Sign Out &amp; Quit</string>
    <string name="artists">Artists</string>
    <string name="show_more">Show More</string>
    <string name="artist_banner">Banner for artist</string>
    <string name="artist_name_placeholder">Artist</string>
    <string name="album_cover">Album Cover Art</string>
    <string name="album_title_placeholder">Album Title</string>
    <string name="albums">Albums</string>
    <string name="popular_songs">Popular Songs</string>
    <string name="pause">&#9612; &#9612;</string>
    <string name="play">&#9654;</string>
    <string name="minus">&#8722;</string>
    <string name="plus">&#43;</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="songs">Songs</string>
    <string name="user_name_placeholder">John_Doe_1337</string>
    <string name="real_name_placeholder">John Doe</string>
    <string name="playlist">Playlist</string>
    <string name="real_name">Real name:</string>
    <string name="user_name">User name:</string>
    <string name="content_desc_profile_image">Spotify profile image</string>
    <string name="placeholder_notification">TODO: Spotify broadcast notification</string>
    <string name="remove_from_playlist">Remove from playlist</string>
    <string name="finalize_playlist">Finalize playlist</string>
</resources>
