<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/activity_horizontal_margin"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin_half"
    android:paddingBottom="@dimen/activity_vertical_margin_half">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:id="@+id/main_click"
            android:layout_toStartOf="@+id/item_more_options"
            android:layout_toLeftOf="@+id/item_more_options">
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:id="@+id/history_item_cover"
                android:contentDescription="@string/placeholder_song_cover_contentdesc"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:src="@drawable/fallback_album"
                android:layout_centerVertical="true" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@id/history_item_cover"
                android:layout_toRightOf="@id/history_item_cover">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_song_title"
                    android:id="@+id/history_item_title"
                    style="@style/text_fat" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_song_information"
                    android:layout_below="@id/history_item_title"
                    android:layout_marginTop="4dp"
                    android:id="@+id/history_item_artist"
                    style="@style/text"/>

            </RelativeLayout>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/char_vertical_ellipsis"
            android:padding="10dp"
            android:id="@+id/item_more_options"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            style="@style/text_huge"/>

    </RelativeLayout>

</LinearLayout>